--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -5,10 +5,12 @@ deploy:
     manifests:
       - ./infra/k8s/*
 build:
-  local:
-    push: false
+  # local:
+  #   push: false
+  googleCloudBuild:
+    projectId: ticketing-dev-352504
   artifacts:
-    - image: ac9831/auth
+    - image: us.gcr.io/ticketing-dev-352504/auth
       context: auth
       docker:
         dockerfile: Dockerfile
