GCP 설정 변경, Error 처리 추가
- GCP 변경된 설정 반영
- Error middle handler 추가

--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -8,9 +8,9 @@ build:
   # local:
   #   push: false
   googleCloudBuild:
-    projectId: ticketing-dev-352504
+    projectId: praxis-cab-352714
   artifacts:
-    - image: us.gcr.io/ticketing-dev-352504/auth
+    - image: us.gcr.io/praxis-cab-352714/auth
       context: auth
       docker:
         dockerfile: Dockerfile
