--- a/ticketing/infra/k8s/auth-depl.yaml
+++ b/ticketing/infra/k8s/auth-depl.yaml
@@ -14,13 +14,14 @@ spec:
     spec:
       containers:
         - name: auth
-          image: us.gcr.io/praxis-cab-352714/auth
+          image: ac9831/auth
           env:
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf 
 ---
 apiVersion: v1
 kind: Service
