--- a/ticketing/auth/package.json
+++ b/ticketing/auth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf node_modules npm install",
     "start": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
@@ -18,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ac9831_sgtickets/common": "^1.0.6",
+    "@ac9831_sgtickets/common": "^1.0.7",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
