--- a/ticketing/infra/k8s/auth-depl.yaml
+++ b/ticketing/infra/k8s/auth-depl.yaml
@@ -16,12 +16,14 @@ spec:
         - name: auth
           image: ac9831/auth
           env:
+            - name: MONGO_URI
+              value: 'mongodb://auth-mongo-srv:27017/auth'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
-# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf 
+# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf
 ---
 apiVersion: v1
 kind: Service
